update to Sitecore 9.2

--- a/src/Foundation/CustomTaggerSettings/code/App_Config/Include/Foundation/zz.Sc.CustomTagger.Serialization.Settings.config
+++ b/src/Foundation/CustomTaggerSettings/code/App_Config/Include/Foundation/zz.Sc.CustomTagger.Serialization.Settings.config
@@ -16,7 +16,7 @@
 
             <!-- You can enter here path to src folder in your solution, 
                 but better to patch this variable in sitecore website folder deployed to iis-->
-            <sc.variable name="sourceFolderCustomTagger" value="C:\projects\Habitat\src" />
+            <sc.variable name="sourceFolderCustomTagger" value="C:\Repository\Sc.CustomTagger\src" />
         </settings>
     </sitecore>
 </configuration>
