--- a/src/Foundation/Serialization/code/Sc.CustomTagger.Serialization.csproj
+++ b/src/Foundation/Serialization/code/Sc.CustomTagger.Serialization.csproj
@@ -13,7 +13,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Sc.CustomTagger.Serialization</RootNamespace>
     <AssemblyName>Sc.CustomTagger.Serialization</AssemblyName>
-    <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <UseIISExpress>true</UseIISExpress>
     <IISExpressSSLPort />
     <IISExpressAnonymousAuthentication />
@@ -49,22 +49,22 @@
     <PackageReference Include="Kamsar.WebConsole" Version="2.0.1" />
     <PackageReference Include="MicroCHAP" Version="1.2.2.2" />
     <PackageReference Include="Microsoft.AspNet.Mvc" Version="5.2.4" />
-    <PackageReference Include="Microsoft.AspNet.Razor" Version="3.2.4" />
-    <PackageReference Include="Microsoft.AspNet.WebPages" Version="3.2.4" />
+    <PackageReference Include="Microsoft.AspNet.Razor" Version="3.2.6" />
+    <PackageReference Include="Microsoft.AspNet.WebPages" Version="3.2.6" />
     <PackageReference Include="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" Version="1.0.8" />
     <PackageReference Include="Microsoft.Net.Compilers" Version="2.6.1" />
     <PackageReference Include="Microsoft.Web.Infrastructure" Version="1.0.0.0" />
-    <PackageReference Include="Rainbow" Version="2.0.5" />
-    <PackageReference Include="Rainbow.Core" Version="2.0.5" />
-    <PackageReference Include="Rainbow.Storage.Sc" Version="2.0.5" />
-    <PackageReference Include="Rainbow.Storage.Yaml" Version="2.0.5" />
-    <PackageReference Include="Sitecore.Kernel" Version="[12.0.0]" />
-    <PackageReference Include="Unicorn" Version="4.0.7" />
-    <PackageReference Include="Unicorn.Core" Version="4.0.7" />
-    <PackageReference Include="Unicorn.Roles" Version="4.0.7" />
-    <PackageReference Include="Unicorn.Roles.Core" Version="4.0.7" />
-    <PackageReference Include="Unicorn.Users" Version="4.0.7" />
-    <PackageReference Include="Unicorn.Users.Core" Version="4.0.7" />
+    <PackageReference Include="Rainbow" Version="2.1.1" />
+    <PackageReference Include="Rainbow.Core" Version="2.1.1" />
+    <PackageReference Include="Rainbow.Storage.Sc" Version="2.1.1" />
+    <PackageReference Include="Rainbow.Storage.Yaml" Version="2.1.1" />
+    <PackageReference Include="Sitecore.Kernel" Version="9.2.0" />
+    <PackageReference Include="Unicorn" Version="4.1.1" />
+    <PackageReference Include="Unicorn.Core" Version="4.1.1" />
+    <PackageReference Include="Unicorn.Roles" Version="4.1.1" />
+    <PackageReference Include="Unicorn.Roles.Core" Version="4.1.1" />
+    <PackageReference Include="Unicorn.Users" Version="4.1.1" />
+    <PackageReference Include="Unicorn.Users.Core" Version="4.1.1" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
@@ -82,17 +82,22 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="App_Config\Include\Foundation\zz.Sc.CustomTagger.Serialization.Settings.config" />
-    <Content Include="App_Config\Include\Foundation\Unicorn.SharedSecret.config">
-      <SubType>Designer</SubType>
-    </Content>
-    <Content Include="App_Config\Include\Foundation\Unicorn\Unicorn.AutoPublish.config" />
-    <Content Include="App_Config\Include\Foundation\Unicorn\Unicorn.config" />
-    <Content Include="App_Config\Include\Foundation\Unicorn\Unicorn.DataProvider.config" />
-    <Content Include="App_Config\Include\Foundation\Unicorn\Unicorn.PowerShell.config" />
-    <Content Include="App_Config\Include\Foundation\Unicorn\Unicorn.UI.config" />
-    <Content Include="App_Config\Include\Foundation\Unicorn\Unicorn.UI.IdentityServer.config" />
-    <Content Include="App_Config\Include\Foundation\Rainbow.config" />
+    <Content Include="App_Config\Include\Rainbow.config" />
+    <Content Include="App_Config\Include\Unicorn.SharedSecret.config" />
+    <Content Include="App_Config\Include\Unicorn\Unicorn.AutoPublish.config" />
+    <Content Include="App_Config\Include\Unicorn\Unicorn.config" />
+    <Content Include="App_Config\Include\Unicorn\Unicorn.Configs.Default.example" />
+    <Content Include="App_Config\Include\Unicorn\Unicorn.Configs.Dependency.config.example" />
+    <Content Include="App_Config\Include\Unicorn\Unicorn.Configs.NewItemsOnly.example" />
+    <Content Include="App_Config\Include\Unicorn\Unicorn.CustomSerializationFolder.config.example" />
+    <Content Include="App_Config\Include\Unicorn\Unicorn.DataProvider.config" />
+    <Content Include="App_Config\Include\Unicorn\Unicorn.Dilithium.config.example" />
+    <Content Include="App_Config\Include\Unicorn\Unicorn.PowerShell.config" />
+    <Content Include="App_Config\Include\Unicorn\Unicorn.Remote.config.disabled" />
+    <Content Include="App_Config\Include\Unicorn\Unicorn.UI.config" />
+    <Content Include="App_Config\Include\Unicorn\Unicorn.UI.DeployedContentEditorWarnings.config.disabled" />
+    <Content Include="App_Config\Include\Unicorn\Unicorn.UI.IdentityServer.config" />
+    <Content Include="App_Config\Include\Unicorn\Unicorn.zSharedSecret.config.example" />
     <None Include="Properties\PublishProfiles\Local.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
